# Impulse505

./: README.md
.github/workflows/: amhf-ci.yml  subnet-scanner-ci.yml
portfolio/: README.md
portfolio/VolgaCTF-2026/crypto/happy-meal/: README.md  solve.py
portfolio/VolgaCTF-2026/pwn/lasos/: exploit.py
portfolio/VolgaCTF-2026/pwn/login/: README.md
portfolio/VolgaCTF-2026/web/directory/: exploit.py
portfolio/VolgaCTF-2026/web/lucky-sensors/: README.md
portfolio/certificates/: README.md
portfolio/pet-projects/amhf/: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tasks.ps1
portfolio/pet-projects/amhf/amhf/: __init__.py  __main__.py  cli.py  config.py  corpus.py  demo.py  metrics.py  orchestrator.py
portfolio/pet-projects/amhf/amhf/delivery/: __init__.py  client.py  request.py
portfolio/pet-projects/amhf/amhf/mutators/: __init__.py  base.py  body.py  headers.py  payload.py  url.py
portfolio/pet-projects/amhf/amhf/oracle/: __init__.py  _backend_helpers.py  backend_oracle.py  combined.py  reflection_check.py  timing_oracle.py  waf_oracle.py
portfolio/pet-projects/amhf/amhf/scheduler/: __init__.py  _ga_helpers.py  _ucb1_stats.py  adaptive.py  chromosome.py  genetic.py  ucb1.py
portfolio/pet-projects/amhf/amhf/storage/: __init__.py  csv_sink.py  jsonl_sink.py  schema.py  sink.py  sqlite_sink.py
portfolio/pet-projects/amhf/amhf/utils/: __init__.py  logging.py  seeding.py
portfolio/pet-projects/amhf/configs/: default.yaml
portfolio/pet-projects/amhf/configs/scenarios/: s1_baseline_modsec_p1_flag.yaml  s1_baseline_modsec_p2_flag.yaml  s1_baseline_naxsi_flag.yaml  s2_single_layer_modsec_p1_flag.yaml  s2_single_layer_modsec_p2_flag.yaml  s2_single_layer_naxsi_flag.yaml  s3_multi_layer_modsec_p1_flag.yaml  s3_multi_layer_modsec_p2_flag.yaml  s3_multi_layer_naxsi_flag.yaml  s4_adaptive_modsec_p1_flag.yaml  s4_adaptive_modsec_p2_flag.yaml  s4_adaptive_naxsi_flag.yaml
portfolio/pet-projects/amhf/configs/scenarios/fpr/: fpr_modsec_p1.yaml  fpr_modsec_p2.yaml  fpr_naxsi.yaml
portfolio/pet-projects/amhf/corpus/: README.md  cmdi.yaml  legitimate.yaml  pathtrav.yaml  sqli.yaml  xss.yaml
portfolio/pet-projects/amhf/docs/: CONFIG.md  LIMITATIONS.md
portfolio/pet-projects/amhf/scripts/: collect_results.py  run_experiments.py  run_multi_seed.py  smoke_stand.py
portfolio/pet-projects/amhf/stand/: README.md  docker-compose.yml
portfolio/pet-projects/amhf/stand/dvwa/: Dockerfile  dvwa-init.sh
portfolio/pet-projects/amhf/stand/flag-app/: Dockerfile  app.py
portfolio/pet-projects/amhf/stand/modsec/: 99-amhf-config.sh  Dockerfile  entrypoint-amhf.sh  nginx-amhf.conf.template
portfolio/pet-projects/amhf/stand/naxsi/: Dockerfile  amhf.conf.template  entrypoint.sh  naxsi.conf  nginx.conf
portfolio/pet-projects/amhf/stand/nemesida/: .gitignore  Dockerfile.disabled  README.md  docker-compose.fragment.yml  entrypoint.sh  nginx-amhf.conf.template
portfolio/pet-projects/amhf/tests/: conftest.py
portfolio/pet-projects/amhf/tests/integration/: test_e2e_adaptive.py  test_e2e_local.py
portfolio/pet-projects/amhf/tests/unit/: test_adaptive.py  test_cli_run.py  test_collect_results.py  test_corpus.py  test_delivery_client.py  test_genetic.py  test_metrics.py  test_mutators_body.py  test_mutators_headers.py  test_mutators_payload.py  test_mutators_url.py  test_oracle_backend.py  test_oracle_combined.py  test_oracle_reflection.py  test_oracle_timing.py  test_oracle_waf.py  test_orchestrator.py  test_smoke.py  test_storage_csv.py  test_storage_jsonl.py  test_storage_sqlite.py  test_ucb1.py
portfolio/pet-projects/subnet-scanner/: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
portfolio/pet-projects/subnet-scanner/core/: __init__.py  arp.py  cve_lookup.py  discovery.py  fingerprint.py  models.py  nbns.py  orchestrator.py  portscan.py
portfolio/pet-projects/subnet-scanner/examples/: generate_demo.py  report.html  scan.json
portfolio/pet-projects/subnet-scanner/lab/: README.md  docker-compose.yml
portfolio/pet-projects/subnet-scanner/reporting/: __init__.py  html_report.py  json_report.py  terminal.py
portfolio/pet-projects/subnet-scanner/templates/: report.html.j2
portfolio/pet-projects/subnet-scanner/tests/: conftest.py  test_arp.py  test_cli.py  test_cve_lookup.py  test_discovery.py  test_fingerprint.py  test_html_report.py  test_json_report.py  test_nbns.py  test_orchestrator.py  test_portscan.py  test_terminal.py
portfolio/writeups/AlfaCTF-2026/: README.md
portfolio/writeups/AlfaCTF-2026/misc/redflag/: README.md  exploit.py
portfolio/writeups/AlfaCTF-2026/reverse/terminal/: README.md
portfolio/writeups/AlfaCTF-2026/web/basecamp/: README.md  solve.py
portfolio/writeups/AlfaCTF-2026/web/capital/: README.md  solve.py
portfolio/writeups/AlfaCTF-2026/web/cat/: README.md  solve.js
portfolio/writeups/AlfaCTF-2026/web/chococore/: README.md  solve.py
portfolio/writeups/AlfaCTF-2026/web/dragon_tea/: README.md  solve.py
portfolio/writeups/AlfaCTF-2026/web/dresscode/: README.md
portfolio/writeups/VolgaCTF-2026/: README.md
(+19 files in other folders)
