[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amhf"
version = "0.1.0"
description = "Adaptive Multi-layer HTTP Fuzzer: UCB1+GA bandit over chromosome-shaped mutation chains for WAF-bypass research"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Impulse505", email = "batursevvlad@gmail.com" }]
keywords = [
    "waf",
    "waf-bypass",
    "fuzzing",
    "security-research",
    "http",
    "ucb1",
    "genetic-algorithm",
    "academic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "aiohttp>=3.10",
    "pydantic>=2.7",
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "matplotlib>=3.8",   # convergence charts in tests/integration/test_e2e_adaptive
    "pandas>=2.0",       # results aggregator (scripts/collect_results.py)
    "pandas-stubs>=2.0", # mypy strict on the aggregator
]

[project.scripts]
amhf = "amhf.cli:cli"

[project.urls]
Homepage = "https://github.com/Impulse505/Impulse505/tree/main/portfolio/pet-projects/amhf"
Documentation = "https://github.com/Impulse505/Impulse505/tree/main/portfolio/pet-projects/amhf/docs"
Source = "https://github.com/Impulse505/Impulse505/tree/main/portfolio/pet-projects/amhf"
Issues = "https://github.com/Impulse505/Impulse505/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["amhf*"]
exclude = ["tests*", "stand*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["stand", ".venv", "results", "logs"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "N",        # pep8-naming
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
]
ignore = [
    "E501",   # длина строки контролируется line-length
    "RUF001", # ambiguous identifier — false-positive on Cyrillic
    "RUF002", # ambiguous in docstrings — false-positive on Cyrillic
    "RUF003", # ambiguous in comments — false-positive on Cyrillic
    "N818",   # MutationSkipped — control-flow signal, not an error
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # тестовые имена могут отклоняться от PEP8

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
exclude = ["build", "stand", ".venv"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "strict"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests (may take longer)",
    "stand: tests that require the docker stand to be up",
]

[tool.coverage.run]
branch = true
source = ["amhf"]
omit = [
    "amhf/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
